Update and rename version SSOZ3JB