@@ -8,15 +8,12 @@ import java.util.Comparator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Scanner;
+import java.util.concurrent.ConcurrentSkipListSet;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.IntStream;
-
-import org.apache.log4j.Logger;
-
-import de.tilman_neumann.util.ConfigUtil;
 
 import static java.math.BigInteger.ONE;
 import static java.math.BigInteger.ZERO;
@@ -29,30 +26,10 @@ Inputs are single values N, of 64-bits, 0 -- 2^64 - 1.
 Output is the number of twin primes <= N; the last
 twin prime value for the range; and the total time of execution.
 
-Parameter tuning would be needed to optimize for other hardware systems (ARM, PowerPC, etc).
-
-Create a new java project from Eclipse (or equivalent)
-There's no external dependencies
-Copy this file in the src folder of the newly created project
-(Change the package name according the name of your project)
-OR
-javac SSOZJ3A.java
-java SSOZJ3A
-OR JDK 11
-java SSOZJ3A.java
-
- Run as Java application, and enter a N value when asked in console.
+Run as Java application, and enter a N value when asked in console.
 
 This java source file, and updates, will be available here:
 https://gist.github.com/Pascal66/4d4229e88f4002641ddcaa5eccd0f6d5
-
-Not necessary (no real improvment before 1E12) to use jvm option like:
- -XX:+AggressiveOpts
- -Xms4g -Xmx4g
- -XX:NewSize=16m -XX:MaxTenuringThreshold=1 -XX:+UseParallelGC
- -XX:+UseNUMA
- -XX:+UseCompressedOops
- -XX:+UseG1GC
 
  Computer used :
 TOSHIBA SATELLITE L875-13D Core i7-3630QM@2.4Ghz 12Go(8+4) Ram DDR3 800Mhz
@@ -74,62 +51,49 @@ JAVA Example :
  total twins = 424084653; last twin = 199999999890+/-1
  total time = 30.339 secs
 
- NIM Example :
- c:\~\nim-1.0.4>twinprimes_ssoz
- 200000000000
- threads = 8
- each thread segment is [1 x 65536] bytes array
- twinprime candidates = 9890110395; resgroups = 6660007
- each 1485 threads has nextp[2 x 37493] array
- setup time = 0.000000 secs
- perform twinprimes ssoz sieve
- 1485 of 1485 threads done
- sieve time = 32.507 secs
- last segment = 368551 resgroups; segment slices = 13
- total twins = 424084653; last twin = 199999999890+/-1
- total time = 32.507 secs
-
- Inspired from a discussion @see "https://forum.nim-lang.org/t/4950" and
-Original nim source file, and updates, available here:
+ Original nim source file, and updates, available here:
 https://gist.github.com/jzakiya/6c7e1868bd749a6b1add62e3e3b2341e
-This work isnt here to prove anything, or wich language is better or not.
+Original d source file, and updates, available here:
+https://gist.github.com/jzakiya/ae93bfa03dbc8b25ccc7f97ff8ad0f61
+Original rust source file, and updates, available here:
+https://gist.github.com/jzakiya/b96b0b70cf377dfd8feb3f35eb437225
 
 Mathematical and technical basis for implementation are explained here:
-https://www.scribd.com/document/395415391/The-Use-of-Prime-Generators-to-
-Implement-Fast-Twin-Primes-Sieve-Of-Zakiya-SoZ-Applications-to-Number-Theory-
-and-Implications-for-the-Riemann-Hypoth
-https://www.scribd.com/doc/228155369/The-Segmented-Sieve-of-Zakiya-SSoZ
-https://www.scribd.com/document/266461408/Primes-Utils-Handbook
+https://www.academia.edu/37952623The_Use_of_Prime_Generators_to_Implement_Fast_Twin_Primes_Sieve_of_Zakiya_SoZ_Applications_to_Number_Theory_and_Implications_for_the_Riemann_Hypotheses
+https://www.academia.edu/7583194/The_Segmented_Sieve_of_Zakiya_SSoZ
+https://www.academia.edu/19786419/PRIMES-UTILS_HANDBOOK
 
 This code is provided free and subject to copyright and terms of the
 GNU General Public License Version 3, GPLv3, or greater.
 License copy/terms are here:  http://www.gnu.org/licenses/
 
 Copyright (c) 2017-20 Jabari Zakiya -- jzakiya at gmail dot com
-Java version 0.0.20 for fun - Pascal Pechard
-Version Date: 2019/12/20
-*/
-public class SSOZJ3A {
+Java version 0.0.21 for fun - Pascal Pechard -- pascal at priveyes dot net
+Version Date: 2020/01/05
+ */
 
-	private static final Logger LOG = Logger.getLogger(SSOZJ3A.class);
-	
+public class SSOZJ3B {
+
 	static final BigInteger TWO = ONE.add(ONE);
 	static final BigInteger THREE = TWO.add(ONE);
+	private static final boolean DEBUG = false;
 
 	static long KB = 0L;               	// segment size for each seg restrack
 	static BigInteger start_num;      	// lo number for range
 	static BigInteger end_num;      	// hi number for range
-	static BigInteger Kmax = ZERO;      // number of resgroups to end_num
+	static BigInteger Kmax = ZERO;          // number of resgroups to end_num
 	static BigInteger Kmin;      		// number of resgroups to start_num
 	static ArrayDeque<Long> primes; 	// list of primes r1..sqrt(N)
-	static long[] cnts; 				// hold twin primes counts for seg bytes
-	static long[] lastwins; 			// holds largest twin prime <= num in each thread
+	static long[] cnts; 			// hold twin primes counts for seg bytes
+	static long[] lastwins; 		// holds largest twin prime <= num in each thread
 	static BigInteger modpg;       		// PG's modulus value
-	static long res_0;       			// PG's first residue value
+	static long res_0;       		// PG's first residue value
 	static LinkedList<Long> restwins; 	// PG's list of twinpair residues
-	static long[] resinvrs; // PG's list of residues inverses
-	static int Bn;       				// segment size factor for PG and input number
-	static int s;       				// 0|3 for 1|8 resgroups/byte for 'small|large' ranges
+	static long[] resinvrs; 		// PG's list of residues inverses
+	static int Bn;       			// segment size factor for PG and input number
+	static int s;       			// 0|3 for 1|8 resgroups/byte for 'small|large' ranges
+
+	static ConcurrentSkipListSet<Long> first100 = new ConcurrentSkipListSet<>();
 
 	// Global array used to count number of primes in each 'seg' byte.
 	// Each value is number of '0' bits (primes) for values 0..255.
@@ -144,45 +108,48 @@ public class SSOZJ3A {
 			,5,4,4,3,4,3,3,2,4,3,3,2,3,2,2,1,4,3,3,2,3,2,2,1,3,2,2,1,2,1,1,0};
 
 	/**
-	 * Create constant parameters for given PG at build time.
+	 * reate prime generator parameters for given Pn at build time.
 	 * Using BigInteger permit Optimized gcd and ModInverse
 	 * At build time, both version (Long and BigInteger are created) depend of inputs
-	 * This give loosing time at setup and benefit for parallel computation
 	 * @param prime int
 	 */
 	private static void genPGparameters(int prime){
-		System.out.println("generating parameters for P "+ prime);
+		System.out.println("Using prime generator parameters for given Pn "+ prime);
 		final long[] primes = {2, 3, 5, 7, 11, 13, 17, 19, 23};
+		// Compute Pn's modulus and res_0 value
 		modpg = ONE;  res_0 = 0L;
 		for (long prm : primes){ res_0 = prm ;
 			if (prm > prime) break; modpg = modpg.multiply(BigInteger.valueOf(res_0));
 		}
 
-		LinkedList<Long> restwins = new LinkedList<>(); 			// save upper twin pair residues here
-		long[] inverses = new long[modpg.intValue()];				// save PG's residues inverses here
+		// save upper twin pair residues here
+		LinkedList<Long> restwins = new LinkedList<>();
+		// save PG's residues inverses here
+		long[] inverses = new long[modpg.intValue()+2];				// save Pn's residues inverses here
 		BigInteger pc = THREE.add(TWO); int inc = 2; BigInteger res = ZERO;
-		while (pc.compareTo(modpg.divide(TWO)) < 0) {       		// find a residue, then modular complement
-			if (modpg.gcd(pc).equals(ONE)) {          				// if pc a residue
+		while (pc.compareTo(modpg.divide(TWO)) < 0) {       			// find a residue, then modular complement
+			if (modpg.gcd(pc).equals(ONE)) {          			// if pc a residue
 				final BigInteger pc_mc = modpg.subtract(pc);		// create its modular complement
 				Integer inv_r = pc.modInverse(modpg).intValue();	// modinv(pc, modpg);  // compute residues's inverse
-				inverses[pc.subtract(TWO).intValue()]= inv_r;   	// save its inverse
-				inverses[inv_r-2] = pc.intValue();     				// save its inverse inverse
-				inv_r = pc_mc.modInverse(modpg).intValue(); 		// compute residues's complement inverse
-				inverses[pc_mc.subtract(TWO).intValue()] = inv_r;	// save its inverse
-				inverses[inv_r-2] = pc_mc.intValue();   			// save its inverse inverse
-				if (res.add(TWO).equals(pc)){
+				inverses[pc.intValue()]= inv_r;   			// save its inverse
+				inverses[inv_r] = pc.intValue();     			// save its inverse inverse
+				inv_r = pc_mc.modInverse(modpg).intValue(); 		// compute complement's inverse
+				inverses[pc_mc.intValue()] = inv_r;			// save its inverse
+				inverses[inv_r] = pc_mc.intValue();   			// save its inverse's inverse
+				if (res.add(TWO).equals(pc)){				// save hi_tp residues
 					restwins.add(pc.longValue());
-					restwins.add(pc_mc.add(TWO).longValue());} 		// save hi_tp residues
+					restwins.add(pc_mc.add(TWO).longValue());}
 				res = pc;
 			}
 			pc = BigInteger.valueOf(pc.longValue() + inc); inc ^= 0b110;
 		}
-		restwins.sort(Comparator.naturalOrder());
 		// last residue is last hi_tp
+		restwins.sort(Comparator.naturalOrder());
 		restwins.add(modpg.add(ONE).longValue());
-		inverses[modpg.subtract(ONE).intValue()]= ONE.intValue();
+
 		// last 2 residues are self inverses
-		inverses[modpg.subtract(THREE).intValue()]= modpg.subtract(ONE).intValue();
+		inverses[modpg.add(ONE).intValue()]= ONE.intValue();
+		inverses[modpg.subtract(ONE).intValue()]= modpg.subtract(ONE).intValue();
 
 		new PGparam(modpg, res_0, restwins, inverses);
 	}
@@ -202,10 +169,10 @@ public class SSOZJ3A {
 		static int segByteSize = 0;
 
 		public PGparam(BigInteger modpg, Long res_0, LinkedList<Long> restwins, long[] inverses) {
-			SSOZJ3A.modpg = modpg;
-			SSOZJ3A.res_0 = res_0;
-			SSOZJ3A.restwins = restwins;
-			SSOZJ3A.resinvrs = inverses;
+			SSOZJ3B.modpg = modpg;
+			SSOZJ3B.res_0 = res_0;
+			SSOZJ3B.restwins = restwins;
+			SSOZJ3B.resinvrs = inverses;
 			Lmodpg = modpg.longValueExact();
 
 			Kmin = start_num.subtract(TWO).divide(modpg).add(ONE);	// number of resgroups to start_num
@@ -224,7 +191,7 @@ public class SSOZJ3A {
 	 * @param start_range BigInteger
 	 * @param end_range bigInteger
 	 */
-	private static void selectPG(BigInteger start_range, BigInteger end_range) {
+	private static void setSieveParameters(BigInteger start_range, BigInteger end_range) {
 		final BigInteger range = end_range.subtract(start_range);
 		int pg = 3;
 		if (end_range.compareTo(BigInteger.valueOf(49L)) < 0) {
@@ -258,8 +225,9 @@ public class SSOZJ3A {
 		s = range.compareTo(BigInteger.valueOf(100_000_000_000L))<0 ? 0 : 3;
 		genPGparameters(pg);
 	}
+
 	/**
-	 * Compute the primes r1..sqrt(input_num) and store in global 'primes' array.
+	 * Compute the primes r0..sqrt(input_num) and store in global 'primes' array.
 	 * Any algorithm (fast|small) is usable. Here the SoZ for P5 is used.
 	 * @param val bigInteger
 	 */
@@ -273,13 +241,14 @@ public class SSOZJ3A {
 				0,5,0,0,0,0,0,6,0,7};
 
 		final long sqrtN = Bsqrt(val).longValue(); 	// Biginteger sqrt of sqrt(input value)
-		final int kmax = val.subtract(BigInteger.valueOf(7L)).divide(BigInteger.valueOf(md)).add(ONE).intValue();   // number of resgroups to input value
+		// number of resgroups to input value
+		final int kmax = val.subtract(BigInteger.valueOf(7L)).divide(BigInteger.valueOf(md)).add(ONE).intValue();
 
 		// byte array of prime candidates init '0'
 		short[] prms = new short[kmax];
 		// init residue parameters
 		int modk = 0; int r = -1; int k = 0;
-		// mark the multiples of the primes r1..sqrtN in 'prms'
+		// # for r0..sqrtN primes mark their multiples
 		while (true) {
 			r++;
 			if (r == rscnt) { r = 0; modk += md; k++; }
@@ -296,18 +265,17 @@ public class SSOZJ3A {
 				// compute cross-product for prm_r|ri pair
 				final int prod = prm_r * ri - 2;
 				// bit mask for prod's residue
-				final int bit_r =(1 << posn[(int) mod(prod , md)])&0XFF;
+				final int bit_r = (1 << posn[(int) mod(prod , md)])&0XFF;
 				// 1st resgroup for prime mult
 				int kpm = k * (prime + ri) + prod / md;
-				while (kpm < kmax){ prms[kpm] |= bit_r; kpm += prime; }
+				while (kpm < kmax) { prms[kpm] |= bit_r; kpm += prime; }
 			}
 		}
 
-		//  prms now contains the nonprime positions for the prime candidates r1..N
-		//  extract primes into global var 'primes'
-
+		// prms now contains the nonprime positions for the prime candidates r0..N
+		// extract primes into global var 'primes'
 		// create empty dynamic array for primes
-		// Here we use the ArrayDeQueue because First & Last are O(1) and iterate like any others: O(n)
+		// Here I use the ArrayDeQueue because First & Last are O(1) and iterate like any others: O(n)
 		 primes = new ArrayDeque<Long>();
 		// for each resgroup
 		IntStream.range(0, kmax).forEach(km->{
@@ -325,6 +293,7 @@ public class SSOZJ3A {
 	/**
 	 * Print twinprimes for given twinpair for given segment slice.
 	 * Primes will not be displayed in sorted order, collect|sort later for that.
+	 *
 	 * @param Kn Long
 	 * @param Ki Long
 	 * @param indx int
@@ -336,24 +305,33 @@ public class SSOZJ3A {
 		// for upper twinpair residue value
 		final long r_hi = restwins.get(indx);
 		// for each byte of resgroups in slice
-		for (int k = (int) (Kn - 1 >>> 3); k > -1; k--)
-			// extract the primes for each resgroup
-			for (int r = 7; r > -1; r--)  {
-				if ((seg[k] | (1 << r)&0XFF) == 0 && modk + r_hi <= PGparam.Lend) {
-					// print twinprime mid val on a line
-					LOG.debug("twin prime centered at " + (modk + r_hi - 1));
-					System.out.println(modk + r_hi - 1);
+			for (int k = 0; k <= (int) ((Kn - 1) >>> 3); k++)
+				// extract the primes for each resgroup
+				for (int r = 0; r <= 7; r++) {
+					if ((seg[k] & (1 << r) & 0XFF) == 0 && (modk + r_hi) <= PGparam.Lend) {    // print twinprime mid val on a line
+						// System.out.println(modk + r_hi - 1);
+						// save first100 twin prime
+						Long l = modk + r_hi;
+						addFirst100(l);
+					}
+					// set base value for next resgroup
+					modk += PGparam.Lmodpg;
 				}
-				
-				// set base value for next resgroup
-				modk += PGparam.Lmodpg;
-			}
 	}
-
+	static void addFirst100(Long tw) {
+		if (first100.size() < 99) {
+			first100.add(tw);
+		} else {
+			Long high = first100.last();
+			if (high.compareTo(tw) > 0)
+				first100.remove(high);
+			first100.add(tw);
+		}
+	}
 	/**
-	 * Compute 1st prime multiple resgroups for each prime r1..sqrt(N)
-	 * and store consecutively as lo_tp|hi_tp pairs for their restracks.
-	 *
+	 Initialize 'nextp' array for twinpair upper residue rhi in 'restwins'.
+	 Compute 1st prime multiple resgroups for each prime r0..sqrt(N) and
+	 store consecutively as lo_tp|hi_tp pairs for their restracks.
 	 * @param hi_r twin pair residues
 	 * @param prime Long
 	 * @param kmin long
@@ -362,28 +340,28 @@ public class SSOZJ3A {
 	private static long[] nextp_init(long hi_r, Long prime, long kmin) {
 		// upper|lower twin pair residues
 		long r_hi = hi_r; long r_lo = r_hi - 2;
-			long[] modDiv = floorDivAndMod(prime - 2, PGparam.Lmodpg);
+		long[] modDiv = floorDivAndMod(prime - 2, PGparam.Lmodpg);
 			// find the resgroup it's in
-			long k = modDiv[0]; //(prime - 2) / PGparam.Lmodpg;
+		long k = modDiv[0]; //(prime - 2) / PGparam.Lmodpg;
 			// and its residue value
-			long r = modDiv[1] + 2; //mod(prime - 2, PGparam.Lmodpg) + 2;
+		long r = modDiv[1] + 2; //mod(prime - 2, PGparam.Lmodpg) + 2;
 			// and its residue inverse
-			long r_inv = resinvrs[(int) modDiv[1]/*(r - 2)*/];
+		long r_inv = resinvrs[(int) modDiv[1]/*(r - 2)*/];
 			// compute the rlow for r for lo_tp
-			long ro = mod(r_lo * r_inv - 2, PGparam.Lmodpg) + 2;
-			long ko = (k * (prime + ro) + (r * ro - 2) / PGparam.Lmodpg);
-			if (ko < kmin) {							// if 1st mult index < start_num's
-				ko = mod(kmin - ko, prime);			// how many indices short is it
-				if (ko > 0) ko = prime - ko;			// adjust index value into range
-			} else ko -= kmin;							// else here, adjust index if it was >
+		long ro = mod(r_lo * r_inv - 2, PGparam.Lmodpg) + 2;
+		long ko = (k * (prime + ro) + (r * ro - 2) / PGparam.Lmodpg);
+		if (ko < kmin) {							// if 1st mult index < start_num's
+			ko = mod(kmin - ko, prime);					// how many indices short is it
+			if (ko > 0) ko = prime - ko;					// adjust index value into range
+		} else ko -= kmin;							// else here, adjust index if it was >
 			// compute the rright for r for hi_tp
-			long ri = mod(r_hi * r_inv - 2, PGparam.Lmodpg) + 2;
-				long ki = k * (prime + ri) + (r * ri - 2) / PGparam.Lmodpg;
-				if (ki < kmin) {						// if 1st mult index < start_num's
-					ki = mod(kmin - ki, prime);		// how many indices short is it
-					if (ki > 0) ki = prime - ki;		// adjust index value into range
-				} else ki -= kmin;						// else here, adjust index if it was >
-			return new long[]{ko, ki};
+		long ri = mod(r_hi * r_inv - 2, PGparam.Lmodpg) + 2;
+		long ki = k * (prime + ri) + (r * ri - 2) / PGparam.Lmodpg;
+		if (ki < kmin) {						// if 1st mult index < start_num's
+			ki = mod(kmin - ki, prime);				// how many indices short is it
+			if (ki > 0) ki = prime - ki;				// adjust index value into range
+		} else ki -= kmin;						// else here, adjust index if it was >
+		return new long[]{ko, ki};
 	}
 
 	/**
@@ -394,13 +372,16 @@ public class SSOZJ3A {
 	 * for primes mults resgroups, and update 'nextp' restrack slices acccordingly.
 	 * <p>
 	 * Find last twin prime|sum for range, store in their arrays for this twinpair.
-	 * Can optionally compile to print mid twinprime values generated by twinpair.
+	 * Can optionally store to debug print mid twinprime values generated by twinpair.
 	 * Uses optimum segment sieve structure for 'small' and 'large' range values.
 	 *
 	 * @param indx
 	 * @param r_hi long
 	 */
 	private static void twins_sieve(int indx, long r_hi) {
+		final int S = 6;				// shift value for 64 bits
+		final int BMASK = (1 << S) - 1;	// bitmask val for 64 bits
+
 		long kmin = PGparam.Lkmin-1;
 		long kmax = PGparam.Lkmax;
 		// init twins cnt|1st resgroup for slice
@@ -434,8 +415,7 @@ public class SSOZJ3A {
 				int k = (int) nextp[j << 1];
 				// mark primenth resgroup bits prime mults
 				while (k < Kn) {
-					if (s > 0) seg[k >>> 3] |= (1 << (k & 7))&0XFF;
-					else seg[k] |= 1;
+					seg[k >>> S] |= (1 << (k & BMASK))&0XFF;
 					// set next prime multiple resgroup
 					k += prime;
 				}
@@ -446,8 +426,7 @@ public class SSOZJ3A {
 				// mark primenth resgroup bits prime mults
 				k = (int) nextp[j << 1 | 1];
 				while (k < Kn) {
-					if (s > 0) seg[k >>> 3] |= (1 << (k & 7))&0XFF;
-					else seg[k] |= 1;
+					seg[k >>> S] |= (1 << (k & BMASK))&0XFF;
 					// set next prime multiple resgroup
 					k += prime;
 				}
@@ -456,27 +435,29 @@ public class SSOZJ3A {
 			}
 			int upk = (int) (Kn - 1);
 			// (not ((2 shl ((Kn-1) and 7)) - 1)).uint8
-			if (s > 0) seg[upk >>> 3] |= ((-(2 << (upk & 7)))&0XFF);
+			seg[upk >>> S] |= ((-(2 << (upk & BMASK)))&0XFF);
 			// init seg twin primes count then find seg sum
 			int cnt = 0;
-			if (s > 0) for (int k = upk >>> 3; k > -1; k--) cnt += pbits[seg[k]];
-			else for (int k = upk; k > -1; k--) if (seg[k] == 0) cnt++;
-
+//			for (int k = upk >>> S; k > -1; k--) cnt += (1 << S) - Integer.bitCount(k);
+			for (int k = upk >>> S; k > -1; k--) cnt += pbits[seg[k]];
 			// if segment has twin primes
 			if (cnt > 0) {
 				// add the segment count to total count
 				sum += cnt;
 				// from end of seg, count backwards to largest tp
-				if (s > 0) while ((seg[upk >>> 3] & (1 << (upk & 7))&0XFF) != 0) upk--;
-				else while (seg[upk] != 0) upk--;
+				while ((seg[upk >>> S] & (1 << (upk & BMASK))&0XFF) != 0) upk--;
 				// numerate its full resgroup value
 				hi_tp = kmin + upk;
 			}
-			printprms(Kn, kmin, indx, seg);  // optional: display twin primes in seg
+			// optional: store twin primes in seg
+			if (DEBUG) printprms(Kn, kmin, indx, seg);
 			// set 1st resgroup val of next seg slice
 			kmin += KB;
 			// set all seg byte bits to prime
-			Arrays.fill(seg, (short) 0);
+			if (kmin < kmax) Arrays.fill(seg, (byte) 0);
+			 // set seg to all primes
+             // when sieve done for full range
+             // numerate largest twinprime in segs
 			j = 0;
 		}
 		// numerate largest twin prime in segs
@@ -485,7 +466,8 @@ public class SSOZJ3A {
 		// store final seg tp value
 		lastwins[indx] = (sum == 0 ? 1 : hi_tp);
 		// sum for twin pair
-		cnts[indx] = sum;                     		}
+		cnts[indx] = sum;
+	}
 
 	/**
 	 * Main routine to setup, time, and display results for twin primes sieve.
@@ -495,10 +477,15 @@ public class SSOZJ3A {
 		// start timing sieve setup execution
 		long ts = epochTime();
 
-		selectPG(start_num, end_num);     		 // select PG and seg factor Bn for input range
-		final int pairscnt = restwins.size();    // number of twin pairs for selected PG
-		cnts = new long[pairscnt];     			 // array to hold count of tps for each thread
-		lastwins = new long[pairscnt];			 // array to hold largest tp for each thread
+		// select PG and seg factor Bn for input range
+		setSieveParameters(start_num, end_num);
+		// number of twin pairs for selected PG
+		final int pairscnt = restwins.size();
+
+		// array to hold count of tps for each thread
+		cnts = new long[pairscnt];
+		// array to hold largest tp for each thread
+		lastwins = new long[pairscnt];
 
 		// number of range resgroups, at least 1
 		final Long range = PGparam.Lkmax - PGparam.Lkmin + 1;
@@ -514,12 +501,12 @@ public class SSOZJ3A {
 
 		System.out.println("each thread segment is ["+ 1+ " x "+ PGparam.segByteSize+ "] bytes array");
 
-		// This is not necessary for running the program but provides information
+		// -- This is not necessary for running the program but provides information
 		// to determine the 'efficiency' of the used PG: (num of primes)/(num of pcs)
 		// Maximum number of twinprime pcs
 		final long maxpairs = range * pairscnt;
 		System.out.println("twinprime candidates = "+ maxpairs+ "; resgroups = "+ range);
-		//   End of non-essential code.
+		// -- End of non-essential code.
 
 		// Generate sieving primes <= sqrt(end_num)
 		if (PGparam.Lend < 49L) primes.add((5L));
@@ -530,15 +517,14 @@ public class SSOZJ3A {
 
 		// number of twin primes in range
 		long twinscnt = 0;
-		// lo_range = lo_tp - 1 this isnt clear
+		// lo_range = lo_tp - 1
 		final long lo_range = restwins.getFirst() - 3;
 		// excluded low tp values for PGs used
 		for (int tp : new int[]{3, 5, 11, 17}) {
 			// if 3 end of range, no twin primes
 			if (end_num.equals(THREE)) break;
-			//.nim version if (tp/*.uint*/ in start_num..lo_range) twinscnt += 1; 	// cnt small tps if any
-			//.other version if(Math.max(start_num.longValue(), tp) == Math.min(tp, lo_range)) twinscnt+=1;
-			//.d version
+
+			// cnt small tps if any
 			if (tp >= PGparam.Lstart && tp <= lo_range) { twinscnt += 1; }
 		}
 		// sieve setup time
@@ -584,23 +570,30 @@ public class SSOZJ3A {
 		long Kn = mod(range, KB);
 		// if multiple of seg size set to seg size
 		if (Kn == 0) Kn = KB;
-		// Free memory
-		cnts = null; lastwins = null;
 		// sieve execution time
 		long t2 = epochTime() - t1;
 		System.out.println("sieve time = "+ t2/1e3 + " secs");
 		System.out.println("last segment = "+ Kn+ " resgroups; segment slices = "+ ((range-1) / KB + 1));
 		System.out.println("total twins = "+ twinscnt+ "; last twin = "+ (last_twin-1) + "+/-1");
 		System.out.println("total time = "+ (t2 + te)/1e3 + " secs\n");
+		// Free memory
+		cnts = null; lastwins = null;
+
+		if (DEBUG) {
+			System.out.println("Lasts +/-1: ");
+			Object[] f100 = first100.stream()//.sorted(Comparator.reverseOrder())
+									.limit(100).map(l -> l - 1)//.sorted()
+									.toArray();
+			System.out.println(Arrays.toString(f100));
+		}
 	}
 
 	public static void main(String[] args) {
-		ConfigUtil.initProject();
-		
 		//if (args==null)
 		Scanner userInput = new Scanner(System.in).useDelimiter("[,\\s+]");
 		System.out.println("Please enter an range of integer (comma or space separated): ");
 		//Only BigDecimal understand scientific notation
+		//This permit to enter 1e6 instead of 1000000
 		BigInteger stop = userInput.nextBigDecimal().toBigIntegerExact();
 		BigInteger start = userInput.hasNextLine()?userInput.nextBigDecimal().toBigIntegerExact():THREE;
 
@@ -640,7 +633,7 @@ public class SSOZJ3A {
 	 * @param x BigInteger
 	 * @return BigInteger sqrt of x
 	 */
-	private static BigInteger Bsqrt(BigInteger x) {
+	public static BigInteger Bsqrt(BigInteger x) {
 		BigInteger div = BigInteger.ZERO.setBit(x.bitLength()/2);
 		BigInteger div2 = div;
 		// Loop until we hit the same value twice in a row, or wind up alternating.
